added highcharts to graph the daily average temps

--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,1 +1,7 @@
 <p>graph works!</p>
+<highcharts-chart 
+  *ngIf="isHighcharts" 
+  [Highcharts]="Highcharts" 
+  [options]="chartOptions"
+  style="width: 100%; height: 400px; display: block;">
+</highcharts-chart>
