--- a/src/app/inputs/inputs.component.html
+++ b/src/app/inputs/inputs.component.html
@@ -1,7 +1,12 @@
 <p>inputs works!</p>
-<mat-date-range-input [rangePicker]="picker">
-    <input matStartDate placeholder="Start date">
-    <input matEndDate placeholder="End date">
+<mat-form-field appearance="fill">
+  <mat-label>Enter a date range</mat-label>
+  <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+    <input matStartDate placeholder="Start date" formControlName="start">
+    <input matEndDate placeholder="End date"  formControlName="end">
   </mat-date-range-input>
-  
+  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
   <mat-date-range-picker #picker></mat-date-range-picker>
+</mat-form-field>
+
+<button mat-stroked-button color="primary" (click)="getDates()">Primary</button>
